--- a/index.html
+++ b/index.html
@@ -1,78 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ice Cream Shop</title>
-    <style>
-        /* Add your CSS styles here */
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-        }
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Ice Cream Shop</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #f4f4f4;
+    }
 
-        header, footer {
-            background-color: #f8f8f8;
-            padding: 10px;
-            text-align: center;
-        }
+    header, footer {
+      background-color: #333;
+      color: #fff;
+      text-align: center;
+      padding: 1em 0;
+    }
 
-        nav {
-            background-color: #333;
-            color: #fff;
-            padding: 10px;
-            text-align: center;
-        }
+    nav {
+      background-color: #eee;
+      padding: 1em;
+    }
 
-        section {
-            padding: 20px;
-        }
+    main {
+      padding: 2em;
+    }
 
-        .product {
-            border: 1px solid #ddd;
-            margin: 10px;
-            padding: 10px;
-            text-align: center;
-        }
-    </style>
+    .product {
+      border: 1px solid #ccc;
+      margin: 1em;
+      padding: 1em;
+      text-align: center;
+    }
+
+    .filter {
+      margin-bottom: 1em;
+    }
+
+    video {
+      width: 100%;
+      height: auto;
+    }
+  </style>
 </head>
 <body>
 
-    <header>
-        <h1>Ice Cream Shop</h1>
-    </header>
+  <header>
+    <h1>Ice Cream Shop</h1>
+  </header>
 
-    <nav>
-        <a href="#">Home</a> |
-        <a href="#">Products</a> |
-        <a href="#">About Us</a> |
-        <a href="#">Contact</a>
-        <input type="text" placeholder="Search">
-        <button>Search</button>
-    </nav>
+  <nav>
+    <ul>
+      <li><a href="#">Home</a></li>
+      <li><a href="#">Flavors</a></li>
+      <li><a href="#">About Us</a></li>
+      <li><a href="#">Contact</a></li>
+    </ul>
+  </nav>
 
-    <section>
-        <div class="product">
-            <img src="ice_cream_image1.jpg" alt="Ice Cream Flavor 1">
-            <h2>Delicious Flavor 1</h2>
-            <p>This is a description of the delicious flavor 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            <button>Add to Cart</button>
-        </div>
+  <main>
+    <div class="filter">
+      <label for="flavor">Filter by Flavor:</label>
+      <select id="flavor">
+        <option value="vanilla">Vanilla</option>
+        <option value="chocolate">Chocolate</option>
+        <option value="strawberry">Strawberry</option>
+      </select>
+    </div>
 
-        <div class="product">
-            <img src="ice_cream_image2.jpg" alt="Ice Cream Flavor 2">
-            <h2>Amazing Flavor 2</h2>
-            <p>This is a description of the amazing flavor 2. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            <button>Add to Cart</button>
-        </div>
+    <div class="product">
+      <h2>Vanilla Ice Cream</h2>
+      <img src="vanilla.jpg" alt="Vanilla Ice Cream">
+      <p>Description: Delicious vanilla ice cream.</p>
+      <button>Add to Cart</button>
+    </div>
 
-        <!-- Add more products as needed -->
-    </section>
+    <div class="product">
+      <h2>Chocolate Ice Cream</h2>
+      <img src="chocolate.jpg" alt="Chocolate Ice Cream">
+      <p>Description: Rich chocolate ice cream.</p>
+      <button>Add to Cart</button>
+    </div>
 
-    <footer>
-        <p>&copy; 2023 Ice Cream Shop. All rights reserved.</p>
-    </footer>
+    <!-- Add more products as needed -->
+
+  </main>
+
+  <footer>
+    <p>&copy; 2023 Ice Cream Shop</p>
+  </footer>
 
 </body>
 </html>
